--- a/app/views/questions/show.haml
+++ b/app/views/questions/show.haml
@@ -1,3 +1,6 @@
+-unless signed_in?
+	=render 'layouts/signed_out_header'
+
 %b Company Id:
 =@question.company_id
 %p
@@ -8,20 +11,22 @@
 
 %b Answers:
 
-- @answers.each do |comment|
-	=render partial: 'layouts/card', locals: { comment: comment }
+- if signed_in?
+	- @answers.each do |comment|
+		=render partial: 'layouts/card', locals: { comment: comment }
+-else
+	"Please signin or signup to see answers?"
 
-
-
-%h3 Your advice will really help other students! Thanks for sharing!
-.comment-form
-	=form_for @new_comment, :url => {:controller => 'comments', :action => 'create'} do |f|
-		= f.text_area :body, :placeholder => "By anonymously sharing your advice, you're helping someone make better career decisions - getting them closer to their dreams. Thank you!"
-		= f.text_field :title, placeholder: "I know this because ..."
-		= f.hidden_field :commentable_id, value: @question.id
-		= f.hidden_field :commentable_type, value: @new_comment.commentable_type
-		= f.hidden_field :category_id, value: @question.category_id	
-		= f.submit
+- if signed_in?
+	%h3 Your answers will really help other students! Thanks for sharing!
+	.comment-form
+		=form_for @new_comment, :url => {:controller => 'comments', :action => 'create'} do |f|
+			= f.text_area :body, :placeholder => "By anonymously sharing your advice, you're helping someone make better career decisions - getting them closer to their dreams. Thank you!"
+			= f.text_field :title, placeholder: "I know this because ..."
+			= f.hidden_field :commentable_id, value: @question.id
+			= f.hidden_field :commentable_type, value: @new_comment.commentable_type
+			= f.hidden_field :category_id, value: @question.category_id	
+			= f.submit
 		
 		
 		
