updated sign-in page and sign-up page

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -36,8 +36,7 @@
 	.container
 		= link_to updates_path do 
 			%b(class="header-alert")
-				New Stuff!
-				Now you can now add a question and seek advice !
+				New Stuff! Now you can now add a question and seek advice !
 	
 		.pull-right
 			Did you find DemPoints useful? Share it with a friend: 
