--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -648,9 +648,7 @@ h3 {
 }
 
 .small-text{
-	padding:9px;
 	font-size: 8px;
-	text-decoration: strikethrough;
 }
 
 .search-header{
@@ -699,7 +697,7 @@ h3 {
 
 .info-box-yellow{
 	box-shadow: 2px 2px 1px #E8E8E8;
-		background-color:white;
+	background-color:white;
 	border:1px solid $light-grey;
 	border-top: 10px solid #F7F0BA;
 	width:250px;
@@ -796,6 +794,7 @@ h3 {
 	border-radius: 4px;
 	border:0px !important;
 	background-color:#54bb62;
+	height:40px;
 }
 
 .sign-up-button:hover, .sign-up-button:focus {
@@ -924,8 +923,8 @@ h3 {
 	min-height:100%;
 		.home-logo{
 			img {
-				height:55px;
-				width:204px;
+				height:44px;
+				width:163px;
 			}
 		}	
 	.home-page-text{
@@ -1099,41 +1098,33 @@ h3 {
 	padding-bottom:400px;
 }
 
+.home-bar-area{
+    position: fixed;
+    bottom: 93%;
+    right: 2%;
+}
+
 .about-button{
-     position: fixed;
-     bottom: 88%;
-     right: 2%;
-	 font-size:11px;
-	 font-weight:700;
-	color:white !important;
-	background-color:#BABABA;
+	font-size:12px;
 	padding:2px 9px;
 	border-radius:4px;
 }
 
-
-
 .signinbox-button{
-     position: fixed;
-     bottom: 92%;
-     right: 2%;
-	 font-size:11px;
-	 font-weight:700;
+ 	margin-top:5px;
+	font-size:12px;
 	color:white !important;
-	background-color:#BABABA;
-	padding:2px 9px;
+	background-color:#54bb62;
+	padding:2px 14px;
 	border-radius:4px;
-	width:44px;
 	text-align:center;;
 }
 
 
-.about-button:hover, .signinbox-button:hover{
-	background-color:$dark-grey;
-	a {
-		color:white !important;
-	}
+.signinbox-button:hover{
+    background: $dark-green;	
 }
+
 
 .about-bottom{
 	padding-bottom:150px;
@@ -1189,4 +1180,49 @@ h3 {
 	img {
 		max-width:100px;
 	}
+}
+
+.item-images{
+	margin-top:30px;
+	background-color:$ft-color;
+	height:380px;
+}
+
+.grey-area{
+	color:#505050;
+}
+
+.white-background-signin{
+	background-color:white;
+	padding:20px 50px 50px;
+	box-shadow: 2px 2px 1px #E8E8E8;
+	background-color:white;
+	border:1px solid $light-grey;
+}
+
+
+.sign-in-area{
+	text-align:center;
+	padding:20px;
+	background-color:$background-grey;
+	border:1px solid $line-grey;
+}
+
+.important-text{
+	font-size:16px;
+	color:$text-grey;
+	margin-bottom:25px;
+}
+
+.card-text{
+	font-size:13px;
+	line-height:19px;
+}
+
+.item-border{
+	border-bottom:1px solid $light-grey;
+	border-top:1px solid $light-grey;
+	padding:15px 0px;
+	margin:15px 0px;
+	
 }
