--- a/app/views/layouts/_card_items.haml
+++ b/app/views/layouts/_card_items.haml
@@ -9,7 +9,7 @@
 = Category.find(comment.category_id).name
 .row-fluid
 	.span12
-		%h5= link_to truncate((sanitize(comment.body)), length: 320), comment_company
+		%span(class="card-text")= link_to truncate((sanitize(comment.body)), length: 320), comment_company
 %br
 =link_to raw("Thank author &nbsp <i class=\"icon-thumbs-up\"></i> "), {:controller =>"comments", :action => "upvote", :id => comment.id}, method: :put, :class => "btn btn-small", :remote => true
 .pull-right
