--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -8,7 +8,7 @@
 		.row-fluid
 			.span12
 				.home-logo
-					= link_to image_tag('white-logo.png'), root_path	
+					= link_to image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path, :class => "home-logo"	
 	%br
 	%br
 	%br
