--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1184,8 +1184,13 @@ h3 {
 
 .item-images{
 	margin-top:30px;
-	background-color:$ft-color;
-	height:380px;
+	border-top: 1px solid $ft-color;
+	border-bottom: 1px solid $ft-color;
+
+	img{
+		height:60px;
+		margin: 10px 20px;
+	}
 }
 
 .grey-area{
