--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -5,7 +5,10 @@
 
 
 .home-bar-area
-	=link_to "About Us", about_path, :class => "about-button"
+	=link_to "About", about_path
+	&nbsp
+	=link_to "Share Advice", root_path
+	&nbsp
 	| &nbsp
 	=link_to "Sign In", new_user_session_path
 	&nbsp
