--- a/app/views/staticpages/_threestep.haml
+++ b/app/views/staticpages/_threestep.haml
@@ -11,20 +11,19 @@
 	.item-images
 		.container
 			.row-fluid
-				-if false
-					.offset2.span4
-						.dashboard.center-alignment
-							%h2 "It's a treasure trove of career advice inside!"
-							%span(class="grey-area") - 4th Year Commerce/Law UNSW Student
-						%br
-						%br
-						Share, discover, 
-						%br
-				.span12
-					.dashboard#container
+				.offset1.span5
+					.dashboard
+						%h2 "It's a treasure trove of career advice inside!"
+						%span(class="grey-area") - 4th Year Commerce/Law UNSW Student
 					%br
-						- @companies.each do |company|
-							= image_tag(company.logo.url, :class=>"item", style: "height:60px")
+					%br
+					Share, discover, 
+					%br
+				.span5
+					.dashboard
+					%br
+					=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/group.jpg')
+
 					.dashboard
 			.row-fluid
 				.center-alignment
