--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,6 +1,6 @@
 #container
 	.item
-		.info-box-light-orange
+		.dashboard-box.hidden
 			.center-alignment
 				%h5 Welcome to DemPoints!
 				%br You can post interesting and useful points about companies & their intern/grad jobs here
