--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -11,7 +11,8 @@ $(document).ready(function(){
 	$container.imagesLoaded( function() {
 		$container.masonry({
 		  columnWidth: 58,
-		  itemSelector: '.item'
+		  itemSelector: '.item',
+		  isFitWidth: true
 		});
 	});
 })
