--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -718,6 +718,7 @@ h3 {
 	}
 }
 
+
 .info-box-light-teal{
 	box-shadow: 2px 2px 1px #E8E8E8;
 	background-color:white;
@@ -1233,4 +1234,8 @@ h3 {
 	width:250px;	
 	padding:10px;
 
+}
+
+#container{
+	margin: 0 auto;
 }
