--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -707,6 +707,7 @@ h3 {
 	line-height:16px;
 	font-size:11px;
 	margin-top:15px;
+	overflow:scroll;
 	h5{
 		color:$orange;
 	}
@@ -733,6 +734,7 @@ h3 {
 	color:$text-grey;
 	line-height:16px;
 	font-size:12px;
+	overflow:scroll;
 	h5{
 		color:$aqua;
 	}
@@ -760,6 +762,7 @@ h3 {
 	color:$text-grey;
 	line-height:16px;
 	font-size:12px;
+	overflow:scroll;
 	h5{
 		color:$dark-red;
 	}
