--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
 			</div>
 		<% else %>
 			<div class= "signed-out">
+				<%= render 'layouts/signed_out_header'%>
 				<%= yield %>	
 			</div>
 		<% end %>
