--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -467,6 +467,7 @@ h3 {
 .header{
 	background-color:$orange;
 	font-size:10px !important;
+	margin-bottom:40px;
 	a{
 		color:white;
 	}
@@ -606,6 +607,7 @@ h3 {
 }
 
 .home-logo{
+	margin-top:50px;
 	img {
 		height:55px;
 		width:204px;
@@ -1006,7 +1008,7 @@ h3 {
 	font-size:15px;
 	padding:10px 100px;
 	border:1px solid $orange;
-	margin-bottom:20px;
+	margin:50px 0px;
 	font-weight:700;
 }
 
@@ -1157,7 +1159,7 @@ h3 {
 }
 
 .large-text{
-	font-size:20px;
+	font-size:18px;
 	color:$light-text-grey;
 }
 
@@ -1170,7 +1172,7 @@ h3 {
 	border-radius: 4px;
 	//background-color:$light-teal;
 	padding:10px;
-	margin-top:15px;
+	margin:40px 0px;
 	color:$text-grey;
 	line-height:16px;
 	font-size:12px;
@@ -1187,6 +1189,7 @@ h3 {
 }
 
 .item-images{
+	padding-top:40px;
 	margin-top:30px;
 	border-top: 1px solid $ft-color;
 	border-bottom: 1px solid $ft-color;
@@ -1198,6 +1201,7 @@ h3 {
 }
 
 .white-background-signin{
+	margin-top:30px;
 	background-color:white;
 	padding:20px 50px 50px;
 	box-shadow: 2px 2px 1px #E8E8E8;
