--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,16 +1,13 @@
+#container		
+	- @comments.each do |comment|
+		=render partial: 'layouts/card', locals: { comment: comment }
 
-
-#container
-	.item
-		.dashboard-box.hidden
+	.item.hidden
+		.dashboard-box
 			.center-alignment
 				%h5 Welcome to DemPoints!
 				%br You can post interesting and useful points about companies & their intern/grad jobs here
 				%br 
 				=render 'layouts/like_button'		
-				
 				%br
 				%br
-				
-	- @comments.each do |comment|
-		=render partial: 'layouts/card', locals: { comment: comment }
