--- a/app/views/staticpages/_threestep.haml
+++ b/app/views/staticpages/_threestep.haml
@@ -1,37 +1,25 @@
-.tiny-orange
 .home-page
-	.dashboard
 	.center-alignment.home-logo
 		=link_to image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path 			
 		%br
-		%span(class="orange-text") 
-			DemPoints makes it easy to find and share career advice in one place
+		%span(class="orange-text") DemPoints makes it easy to find and share career advice in one place
 
 =link_to new_user_registration_path do
 	.item-images
-		.container
-			.row-fluid
-				.offset1.span5
-					.dashboard
-						%h4 "It's a treasure trove of career advice inside!"
-						%span(class="grey-area") - 4th Year Commerce/Law UNSW Student
+		.row-fluid
+			.offset1.span5
+				%h4 "It's a treasure trove of career advice inside!"
+				%span(class="grey-area") - 4th Year Commerce/Law UNSW Student
+			.span5
+				=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/group.jpg')
 
-				.span5
-					.dashboard
-					%br
-					=image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/group.jpg')
 
-					.dashboard
-			.row-fluid
-				.center-alignment
-					=link_to about_path do
-						.signup-button
-							Can you help others out? &nbsp Want to explain how things actually work?
-							%br Share some advice
-					.dashboard		
-.container
-	.row-fluid
-		.offset3.span6
-			.dashboard
-				.center-alignment
-					=render 'layouts/facebook_like_large'
+		.row-fluid
+			.center-alignment
+				=link_to new_comment_path do
+					.signup-button
+						Can you help others out? &nbsp Want to explain how things actually work?
+						%br Share some advice
+
+.center-alignment.dashboard
+	=render 'layouts/facebook_like_large'
