--- a/app/views/staticpages/about.haml
+++ b/app/views/staticpages/about.haml
@@ -1,32 +1,15 @@
-- if !signed_in?
-	.tiny-orange
+- unless signed_in?	
+	.dashboard
 
-.dashboard
-	
-- if !signed_in?	
-	.container
-		.row-fluid
-			.span12
-				.home-logo
-					= link_to image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path, :class => "home-logo"	
-	%br
-	%br
-	%br
-	
 .container.about
 	.row-fluid
 		.span6
-			
-			%h3 About Us
-
+			%h3 About DemPoints
 	.row-fluid
-
-			
 		.span8
 			.about-area
 				.about-text
-					%b
-						%p Founded by two UNSW students who held leadership positions at student societies, Dempoints is an online platform to read, create and share job advice by students for students. 
+					%p(style="font-weight:bold") Founded by two UNSW students who held leadership positions at student societies, Dempoints is an online platform to read, create and share job advice by students for students. 
 					%br
 					%p Whether an engineer, a prospective lawyer, a future consultant or a marketer to-be, DemPoints is one reference point (of many) for you to help you find out what it really takes to enter these industries and give you a better idea of what you're aiming for.
 					%br
