changed overflow on cards

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -709,7 +709,7 @@ h3 {
 	line-height:16px;
 	font-size:11px;
 	margin-top:15px;
-	overflow:scroll;
+	overflow:hidden;
 	h5{
 		color:$orange;
 	}
@@ -736,7 +736,7 @@ h3 {
 	color:$text-grey;
 	line-height:16px;
 	font-size:12px;
-	overflow:scroll;
+	overflow:hidden;
 	h5{
 		color:$aqua;
 	}
@@ -764,7 +764,7 @@ h3 {
 	color:$text-grey;
 	line-height:16px;
 	font-size:12px;
-	overflow:scroll;
+	overflow:hidden;
 	h5{
 		color:$dark-red;
 	}
