got ajax sign in working, but not sign up redirect

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -14,4 +14,15 @@ $(document).ready(function(){
 		  isFitWidth: true
 		});
 	});
+	
+	$(function() {
+    $( "#dialog" ).dialog({autoOpen: false});
+  });
+
+ $( "#share-advice" )
+      .button()
+      .click(function() {
+        $( "#dialog" ).dialog( "open" );
+      });
+
 })
