--- a/app/views/comments/new.haml
+++ b/app/views/comments/new.haml
@@ -34,9 +34,24 @@
 						%br
 						.row-fluid
 							.span4
-								= f.submit "Share Advice", :class => "sign-up-button"
+								= f.submit "Share Advice", :class => "sign-up-button", :id => "share-advice"
+								=link_to 'hello', '#', :id => "share-advice", :remote => true
 
 
+-unless signed_in?
+	#dialog
+		.sign-in-area
+			%h4 Create an account
+			%br
+			= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"},:format => :html, :remote => true) do |f|
+				= f.text_field :first_name, :placeholder => " First Name", :class => "focus_"
+				= f.email_field :email, :placeholder => " Email"
+				= f.password_field :password, :placeholder => " Password"
+				= f.hidden_field :role, :value => "student"
+				- if false
+					= f.password_field :password_confirmation, :placeholder => "Password Confirmation"
+				%div= f.submit "Join", :class => "sign-up-button"
+			=link_to "Already have an account? Sign in", new_user_session_path
 
 			
 
