--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1246,3 +1246,29 @@ h3 {
 #container{
 	margin: 0 auto;
 }
+
+#share-advice{
+	padding:0px 50px;
+	color:white;
+	font-size:15px;
+}
+
+/*.overlay {
+	opacity : 0.4;
+	position: relative;
+	top: 0;
+	left: 0;
+	background-color: $orange;
+	width: '100%';
+	z-index:-1;
+}
+*/
+.ui-widget-overlay { 
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    background: #aaaaaa;
+    opacity: 0.3;
+}
