--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1007,7 +1007,8 @@ h3 {
 .signup-button{
 	font-size:15px;
 	padding:10px 100px;
-	border:1px solid $orange;
+	border-top:1px solid $orange;
+	border-bottom:1px solid $orange;
 	margin:50px 0px;
 	font-weight:700;
 }
@@ -1269,6 +1270,6 @@ h3 {
     left: 0; 
     width: 100%; 
     height: 100%; 
-    background: #aaaaaa;
-    opacity: 0.3;
+    background: white;
+    opacity: 0.8;
 }
