--- a/app/views/devise/registrations/new.haml
+++ b/app/views/devise/registrations/new.haml
@@ -43,7 +43,7 @@
 								.sign-in-area
 									%h4 Create an account
 									%br
-									= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"},:format => :html, :remote => true) do |f|
+									= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {:id => "sign_up_user"}) do |f|
 										= f.text_field :first_name, :placeholder => " First Name", :class => "focus_"
 										= f.email_field :email, :placeholder => " Email"
 										= f.password_field :password, :placeholder => " Password"
