--- a/app/views/layouts/_signed_out_header.haml
+++ b/app/views/layouts/_signed_out_header.haml
@@ -1,8 +1,16 @@
 .tiny-orange
 .home-bar-area
-	=link_to "About DemPoints", about_path
+	=link_to "DemPoints", root_path
+	&nbsp
+	&nbsp
+	=link_to "New Stuff!", updates_path
+	&nbsp
+	&nbsp
+	=link_to "About", about_path
+	&nbsp
 	&nbsp
 	=link_to "Share Advice", new_comment_path
+	&nbsp
 	&nbsp
 	| &nbsp
 	=link_to "Sign In", new_user_session_path
