--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1273,3 +1273,10 @@ h3 {
     background: white;
     opacity: 0.8;
 }
+
+.question-area{
+	padding:20px;
+	background-color:$background-grey;
+	border:4px solid $dark-grey;
+	border-radius:5px;
+}
