--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -50,16 +50,17 @@
 			&nbsp &nbsp
 			
 - #questions
-#question
-	.question-area
-		%b Add Question
-		=form_for @ask_question do |f|
-			= f.collection_select :company_id, Company.order(:name), :id, :name, {}, :id => "searchq" 
-			%br
-			%br
-			= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "searchq2"
-			%br
-			%br
-			= f.text_area :question_content, :placeholder => "What is your question?"
-			= f.hidden_field :user_id, :value => current_user.id
-			= f.submit
+.hidden
+	#question
+		.question-area
+			%b Add Question
+			=form_for @ask_question do |f|
+				= f.collection_select :company_id, Company.order(:name), :id, :name, {}, :id => "searchq" 
+				%br
+				%br
+				= f.collection_select :category_id, Category.order(:name).where("category = ?", "Review"), :id, :name, {}, :id => "searchq2"
+				%br
+				%br
+				= f.text_area :question_content, :placeholder => "What is your question?"
+				= f.hidden_field :user_id, :value => current_user.id
+				= f.submit
