--- a/app/views/staticpages/_threestep.haml
+++ b/app/views/staticpages/_threestep.haml
@@ -1,8 +1,8 @@
 .home-page
 	.center-alignment.home-logo
-		=link_to image_tag('http://s3-ap-southeast-2.amazonaws.com/static-images-resquery/white-logo.png'), root_path 			
+
 		%br
-		%span(class="orange-text") DemPoints makes it easy to find and share career advice in one place
+		%span(class="large-orange-text") Find and Share Career Advice
 
 =link_to new_user_registration_path do
 	.item-images
