testing image sizes for cards

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -28,7 +28,7 @@
 				.pull-right
 					=link_to updates_path do 
 						.account-button
-							New Stuff !
+							%u New Stuff !
 				
 					= link_to edit_user_registration_path do
 						.account-button				
