--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-@import "bootstrap-responsive";
+@import "bootstrap-responsive"; 	
 
 /* ========= SECTION: CONTENTS =========*/
 /*
@@ -1294,4 +1294,11 @@ h3 {
 .large-orange-text{
 	font-size:30px;
 	color:$orange;
+}
+
+.card-image{
+	height:70px;
+	img{
+		max-height:70px;
+	}
 }
