--- a/app/views/dashboards/dashboard.haml
+++ b/app/views/dashboards/dashboard.haml
@@ -1,13 +1,15 @@
-#container		
-	- @comments.each do |comment|
-		=render partial: 'layouts/card', locals: { comment: comment }
+.row-fluid
+	.span12
+		#container		
+			- @comments.each do |comment|
+				=render partial: 'layouts/card', locals: { comment: comment }
 
-	.item.hidden
-		.dashboard-box
-			.center-alignment
-				%h5 Welcome to DemPoints!
-				%br You can post interesting and useful points about companies & their intern/grad jobs here
-				%br 
-				=render 'layouts/like_button'		
-				%br
-				%br
+			.item.hidden
+				.dashboard-box
+					.center-alignment
+						%h5 Welcome to DemPoints!
+						%br You can post interesting and useful points about companies & their intern/grad jobs here
+						%br 
+						=render 'layouts/like_button'		
+						%br
+						%br
