--- a/app/views/layouts/_card_items.haml
+++ b/app/views/layouts/_card_items.haml
@@ -1,6 +1,6 @@
 - comment_company = comment.get_company_for_comment
 
-.center-alignment
+.center-alignment.card-image
 	= link_to image_tag(comment_company.logo.url), comment_company
 %br
 %br
