adjusted companies index page for new standard logo size

--- a/app/views/companies/index.haml
+++ b/app/views/companies/index.haml
@@ -15,7 +15,7 @@
 			.item
 				.info-box-light-orange
 					.pad-top-tiny
-					.center-alignment
+					.center-alignment.card-image
 						- if !company.logo.url.blank?
 							= image_tag(company.logo.url)
 							%h5= link_to company.name, company
