--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
 		<% else %>
 			<div class= "signed-out">
 				<%= render 'layouts/signed_out_header'%>
-				<%= yield %>	
+				<div class="container">
+					<%= yield %>	
+				</div>
 			</div>
 		<% end %>
 	</body>
